[package]
name = "connectracer"
version = "0.1.0"
edition = "2018"

[dependencies]
libbpf-rs = "0.14"
plain = "0.2"
clap = "3.0.0-beta.5"
opentelemetry = "0.16.0"
opentelemetry-prometheus = "0.9.0"
prometheus = "0.12"
futures = "0.3.16"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread", "signal"] }
hyper = { version = "0.14.15", features = ["server", "tcp", "http1", "http2"] }
trust-dns-client = "0.21.0-alpha.4"

[build-dependencies]
libbpf-cargo = "0.9"
